[project]
name = 'asdf_unit_schemas'
description = 'ASDF unit schemas'
readme = 'README.md'
requires-python = '>=3.9'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Development Status :: 5 - Production/Stable',
]
dependencies = [
    'asdf-standard >= 1.0.1',
]
dynamic = ['version']

[project.optional-dependencies]
docs = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'sphinx-rtd-theme',
]
test = [
    'asdf >= 2.8.0',
    'pytest',
]

[project.urls]
'tracker' = 'https://github.com/asdf-format/asdf-unit-schemas/issues'
'documentation' = 'https://asdf-unit-schemas.readthedocs.io/en/stable'
'repository' = 'https://github.com/asdf-format/asdf-unit-schemas'

[project.entry-points]
'asdf.resource_mappings' = { asdf_unit_schemas = 'asdf_unit_schemas.integration:get_resource_mappings' }

[build-system]
requires = [
    "setuptools >=60",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/asdf_unit_schemas/_version.py"
[tool.setuptools]
packages = ["asdf_unit_schemas", "asdf_unit_schemas.resources"]

[tool.setuptools.package-data]
"asdf_unit_schemas.resources" = ["resources/**/*.yaml"]

[tool.setuptools.package-dir]
'' = "src"
"asdf_unit_schemas.resources" = "resources"

[tool.pytest.ini_options]
asdf_schema_root = 'resources/stsci.edu/schemas'
asdf_schema_tests_enabled = 'true'
asdf_schema_ignore_unrecognized_tag = 'true'
testpaths = """
    tests
    resources
"""
addopts = '--color=yes'

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
